syntax = "proto3";

package users.admin; 

option go_package = "mini-marketplace/proto/users/admin";

import "proto/users/users.proto";

service UsersAdminService {
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  users.User user = 1; 
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated users.User users = 1; 
}